# mcp-omada

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-notes.md
src/mcp_omada/: __init__.py  audit.py  channels.py  client.py  config.py  correlation.py  exceptions.py  formatting.py  guard.py  server.py  validation.py
tests/: conftest.py  fakes.py  test_audit.py  test_channels.py  test_client.py  test_config.py  test_correlation.py  test_formatting.py  test_guard.py  test_guard_audit.py  test_server.py  test_validation.py
