[project]
name = "mcp-omada"
version = "0.2.0"
description = "Model Context Protocol server for TP-Link Omada SDN controllers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Thalis Antunes" }]
keywords = ["mcp", "omada", "tp-link", "model-context-protocol"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=1.13",
]

[project.scripts]
mcp-omada = "mcp_omada.server:main"

[project.urls]
Homepage = "https://github.com/thalisantunes/mcp-omada"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_omada"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["mcp_omada"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Same deliberately moderate rule set as mcp-mikrotik (this project's sibling):
# pyflakes (F) + pycodestyle errors (E) catch real bugs/style drift, isort (I)
# keeps imports sorted, pyupgrade (UP) nudges modern syntax, flake8-bugbear (B)
# catches common gotchas, flake8-comprehensions (C4) and flake8-simplify (SIM)
# suggest clearer equivalents. Deliberately NOT enabling pydocstyle (D) or
# flake8-annotations (ANN) - docstrings here are prose explanations, not a
# fixed docstring-convention target, and type coverage is handled by mypy.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    # Long lines happen in explanatory docstrings/error messages throughout
    # this codebase (see e.g. client.py's module docstring) - `ruff format`
    # already wraps what it safely can; the rest is intentional prose.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Test files intentionally construct edge-case values that don't need the
# same scrutiny as library code.
"tests/*" = ["SIM108"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
files = ["src/mcp_omada"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
